--- a/config/docker.config
+++ b/config/docker.config
@@ -9,10 +9,10 @@ process {
     container = "nanozoo/busco:5.5.0--427a3e7"
  }
  withName:make_report {
-    container = "dhp565/rmd_ampliseq:21022024"
-}
+   container="dhp565/rmarkdown_pagedown:v1.0.0"
+ }
 withName:mlst {
-    container="staphb/mlst:2.23.0-2023-08"
+    container="staphb/mlst:2.23.0-2024-12-31"
   }
 withName:abricate {
   container= "quay.io/biocontainers/abricate:1.0.1--ha8f3691_1"
